[package]
name = "exonum-api"
version = "1.0.0"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-api"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "http"]
categories = ["cryptography"]
description = "HTTP API engine of the Exonum framework"

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
actix-cors = "0.5.1"
actix-rt = "1.1"
actix-web = { version = "3.0.2", default-features = false }
anyhow = "1.0"
chrono = { version = "0.4.15", features = ["serde"] }
futures = "0.3.5"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
toml = "0.5.6"
