[package]
name = "exonum-api"
version = "1.0.0"
edition = "2021"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-api"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "http"]
categories = ["cryptography"]
description = "HTTP API engine of the Exonum framework"

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
actix-cors = "0.6"
actix-server = "2.1"
actix-web = { version = "4.1", default-features = false }
anyhow = "1.0"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
time = { version = "0.3", features = [ "formatting", "macros", "serde" ] }

[dependencies.tokio]
version = "1"
features = ["io-util", "macros", "rt-multi-thread", "net", "time"]

[dev-dependencies]
pretty_assertions = "1"
toml = "0.7"
