[package]
name = "exonum-cli"
version = "0.12.0"
authors = ["Exonum Team <exonum@bifury.com>"]
edition = "2018"

[dependencies]
exonum = { version = "0.12.0", path = "../../exonum" }
structopt = "0.2.18"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
zeroize = "0.9"
rpassword = "4.0"
toml = "0.5"

[dev-dependencies]
pretty_assertions = "0.6.1"
tempfile = "3.1.0"
