[package]
name = "exonum-crypto"
version = "1.0.0"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-crypto"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "cryptography", "hashing", "library"]
categories = ["algorithms", "cryptography"]
description = "Cryptography related types, constants, traits and functions."
links = "exonum_protobuf_crypto"

[dependencies]
anyhow = "1.0.26"
hex = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
exonum_sodiumoxide = { version = "0.0.24", optional = true }
exonum-proto = { path = "../proto", version = "1.0.0", optional = true }
protobuf = { version = "3", features = ["with-serde"], optional = true }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.2"

[features]
default = ["sodiumoxide-crypto", "with-protobuf", "with-serde"]
sodiumoxide-crypto = ["exonum_sodiumoxide"]
with-protobuf = ["exonum-proto", "protobuf"]
with-serde = []

[build-dependencies]
exonum-build = { version = "1.0.1", path = "../build" }
