[package]
name = "exonum-derive"
version = "0.12.0"
edition = "2018"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-derive"
license = "Apache-2.0"
keywords = ["protobuf", "exonum"]
categories = ["development-tools"]
description = "Helper macros for serialization structs in protobuf."

[lib]
proc-macro = true

[dependencies]
darling = "0.9.0"
heck = "0.3.1"
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"
semver = "0.9"
