[package]
name = "exonum-derive"
version = "0.13.0-rc.1"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-derive"
license = "Apache-2.0"
keywords = ["protobuf", "exonum"]
categories = ["development-tools"]
description = "Helper macros for serialization structs in protobuf."

[lib]
proc-macro = true

[dependencies]
darling = "0.10.0"
heck = "0.3.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
semver = "0.9"
