[package]
name = "exonum-derive"
version = "1.0.0-rc.1"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-derive"
readme = "README.md"
license = "Apache-2.0"
keywords = ["protobuf", "exonum"]
categories = ["development-tools"]
description = "Procedural macros for Exonum framework."

[lib]
proc-macro = true

[dependencies]
darling = "0.10.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
semver = "0.9"
