[package]
name = "exonum-explorer"
version = "1.0.0-rc.1"
edition = "2018"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-explorer"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "explorer", "blockchain"]
categories = ["cryptography"]
description = "Blockchain explorer utils for the Exonum framework"

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
exonum = { version = "1.0.0-rc.1", path = "../../exonum" }

chrono = { version = "0.4.6", features = ["serde"] }
hex = "=0.4.0" # 0.4.1 is not compatible with Rust 1.36
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
exonum-derive = { version = "1.0.0-rc.1", path = "../derive" }
exonum-merkledb = { version = "1.0.0-rc.1", path = "../merkledb" }
exonum-rust-runtime = { version = "1.0.0-rc.1", path = "../../runtimes/rust" }

bincode = "1.2.1"
failure = "0.1.5"
futures = "0.1.29"
serde_json = "1.0"
