[package]
name = "exonum-explorer"
version = "1.0.0-rc.3"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-explorer"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "explorer", "blockchain"]
categories = ["cryptography"]
description = "Blockchain explorer utils for the Exonum framework"

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
exonum = { version = "1.0.0-rc.3", path = "../../exonum" }

chrono = { version = "0.4.6", features = ["serde"] }
hex = "0.4.0"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
exonum-derive = { version = "1.0.0-rc.3", path = "../derive" }
exonum-merkledb = { version = "1.0.0-rc.3", path = "../merkledb" }
exonum-rust-runtime = { version = "1.0.0-rc.3", path = "../../runtimes/rust" }

bincode = "1.2.1"
serde_json = "1.0"
