[package]
name = "exonum-keys"
version = "1.0.0-rc.3"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-keys"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "cryptography", "hashing", "library"]
categories = ["algorithms", "cryptography"]
description = "Exonum node keys management."

[dependencies]
anyhow = "1.0.26"
rand = "0.7"
pwbox = "0.3.0"
secret-tree = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3"
toml = "0.5.0"

exonum-crypto = { version = "1.0.0-rc.3", path = "../crypto" }

[dev-dependencies]
hex = "0.4.0"
serde_json = "1.0"
tempdir = "0.3.7"

[[example]]
name = "key-generator"
path = "examples/key_generator.rs"
test = true
