[package]
name = "exonum-keys"
version = "1.0.0"
edition = "2021"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-keys"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "cryptography", "hashing", "library"]
categories = ["algorithms", "cryptography"]
description = "Exonum node keys management."

[dependencies]
anyhow = "1.0"
rand = "0.8"
pwbox = "0.5"
secrecy = "0.8"
secret-tree = "0.5"
serde = "1.0"
serde_derive = "1.0"
toml = "0.7"

exonum-crypto = { version = "1.0.0", path = "../crypto" }

[dev-dependencies]
hex = "0.4.2"
serde_json = "1.0"
structopt = "0.3"
tempfile = "3.2"

[[example]]
name = "key-generator"
path = "examples/key_generator.rs"
test = true
