[package]
name = "exonum-merkledb"
version = "0.13.0-rc.2"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-merkledb"
readme = "README.md"
license = "Apache-2.0"
links = "exonum_protobuf_merkledb"

keywords = ["exonum", "cryptography", "database", "merkelize", "patricia"]
categories = ["cryptography", "database", "data-structures"]
description = "Persistent storage implementation based on RocksDB which provides APIs to work with Merkelized data structures."

[dependencies]
bincode = "1.1"
byteorder = "1.3"
chrono = "0.4.6"
enum-primitive-derive = "0.1"
exonum-crypto = { path = "../crypto", version = "0.13.0-rc.2", features = ["with-serde"]}
exonum-proto = { path = "../proto", version = "0.13.0-rc.2", optional = true }
failure = "0.1"
hex = "0.4"
leb128 = "0.2"
num-traits = "0.2"
rocksdb = { version = "0.12.3", default-features = false }
rust_decimal = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = "1.0"
tempfile = "3.0"
uuid = { version="0.8", features = ["v4"] }
rand = "0.7"
protobuf = { version = "2.8.1", features = ["with-serde"], optional = true }

[dev-dependencies]
assert_matches = "1.3.0"
criterion = "0.3"
exonum-derive = { version = "0.13.0-rc.2", path = "../derive" }
rand = "0.7"
proptest = "0.9"
modifier = "0.1"
pretty_assertions = "0.6"
url = "2.0.0"

[[bench]]
name = "criterion"
path = "benches/lib.rs"
harness = false

[features]
default = ["rocksdb_snappy", "with-protobuf"]
long_benchmarks = []
with-protobuf = ["with-serde", "protobuf", "exonum-proto"]
with-serde = []
rocksdb_snappy = ["rocksdb/snappy"]
rocksdb_lz4 = ["rocksdb/lz4"]
rocksdb_zlib = ["rocksdb/zlib"]
rocksdb_zstd = ["rocksdb/zstd"]
rocksdb_bzip2 = ["rocksdb/bzip2"]

[[example]]
name = "blockchain"

[build-dependencies]
exonum-build = { version = "0.13.0-rc.2", path = "../build" }
