[package]
name = "exonum-proto"
version = "1.0.0-rc.3"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-proto"
readme = "README.md"
license = "Apache-2.0"
keywords = ["protobuf", "exonum"]
categories = ["development-tools"]
description = "Helper traits and macros for serialization structs in protobuf."
links = "exonum_protobuf_common"

[dependencies]
anyhow = "1.0"
base64 = "0.12.0"
base64-serde = "0.5.0"
chrono = { version = "0.4.6", features = ["serde"] }
protobuf = { version = "2.8.1", features = ["with-serde"] }
bit-vec = "0.6.1"
serde = "1.0.101"
serde_derive = "1.0.101"
exonum-derive = { path = "../derive", version = "1.0.0-rc.3"}
protobuf-convert = "0.3.0"

[dev-dependencies]
rand = "0.7.3"
serde_json = "1.0.48"

[features]
default = ["with-serde"]
with-serde = []

[build-dependencies]
exonum-build = { version = "1.0.0-rc.3", path = "../build" }
