[package]
name = "exonum-proto"
version = "1.0.0"
edition = "2018"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-proto"
readme = "README.md"
license = "Apache-2.0"
keywords = ["protobuf", "exonum"]
categories = ["development-tools"]
description = "Helper traits and macros for serialization structs in protobuf."
links = "exonum_protobuf_common"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
protobuf = { version = "3", features = ["with-serde"] }
bit-vec = "0.6.1"
serde = "1.0"
serde_derive = "1.0"
time = { version = "0.3", features = ["serde"] }
protobuf-convert = "0.4"

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"

[features]
default = ["with-serde"]
with-serde = []

[build-dependencies]
exonum-build = { version = "1.0.1", path = "../build" }
