[package]
name = "exonum-proto"
version = "1.0.0"
edition = "2021"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/exonum-proto"
readme = "README.md"
license = "Apache-2.0"
keywords = ["protobuf", "exonum"]
categories = ["development-tools"]
description = "Helper traits and macros for serialization structs in protobuf."
links = "exonum_protobuf_common"

[dependencies]
anyhow = "1"
base64 = "0.21"
bit-vec = "0.6"
protobuf = "3"
protobuf-convert = "0.5"
serde = { version = "1", features = [ "derive" ] }
time = { version = "0.3", features = [ "serde" ] }

[dev-dependencies]
rand = "0.8"
serde_json = "1"

[build-dependencies]
exonum-build = { version = "1.0.1", path = "../build" }
