[package]
name = "exonum-protobuf-convert"
version = "0.12.0"
edition = "2018"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
documentation = "https://docs.rs/protobuf-convert"
license = "Apache-2.0"
keywords = ["protobuf", "exonum"]
categories = ["development-tools"]
description = "Helper macros for serialization structs in protobuf."

[lib]
proc-macro = true

[dependencies]
darling = "0.10.0"
heck = "0.3.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
semver = "0.9"
